image_picker/static/image_picker/css/main.css
.responsive {
    display: block;
    max-width: 960px;
    width: 100%;
    margin: 0 auto;
}

.error-message {
    text-align: center;
    color: red;
    padding: 10px;
}

/* sidenav */

.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0;
  max-width: 0;
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: black; /* Black*/
  color: #818181;
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 10px;
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}
.sidenav-open {
    width: 100%;
    max-width: 430px;
}
.sidenav-title {
    font-size: 25px;
    color: #818181;
    padding: 8px 8px 8px 32px;
}
/* The navigation menu links */
.galleries-container a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}
.show-mode {
    padding: 8px 8px 8px 32px;
    align-items: center;
}

.show-mode span {
    color: #818181;
}
.galleries-container a.selected {
    border: 1px solid #f1f1f1;
}
/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#imageContainer {
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
}

#imageName {
    text-align: center;
}

.show-mode select {
    flex-grow: 1;
    margin-left: 5px;
}

